# axon-agency-official

./: .env.example  .gitignore  .replit  CHECKLIST.md  CRONOGRAMA_PRUEBAS_META_AGENT.md  Dockerfile  Makefile  POST_BUILD_REPORT.md  README.md  REPLIT_INVENTARIO.md  REPORTE_PRUEBAS_META_AGENT.md  VERIFY.md  docker-compose.axon88.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
app/: config.py  deps.py  main.py  security.py  ws.py
app/adapters/: flows_n8n.py  llm_deepseek.py  llm_gemini.py  llm_ollama.py  llm_openai.py  llm_sdxl_local.py  services_docker.py  services_systemd.py  tunnels_cloudflared.py  tunnels_tailscale.py
app/core/: detect.py  events.py  registry.py  types.py  utils.py
app/routers/: catalog.py  commands.py  files.py  flows.py  health.py  llm.py  metrics.py  services.py  tunnels.py
axon-agency/: .gitignore  INTEGRATION.md  INTEGRATION_STATUS.txt  Makefile  QUICKSTART.md  README.md  docker-compose.axon88.yml
axon-agency/docs/: AGENT_BUILDER_PLAN.md  AXON88_AGENCY_COMPLETE_STATUS.md  AXON88_AGENCY_MAP.md  AXON88_BACKEND_CONFIG.md  AXON88_DEPLOY_NOTES.md  AXON88_FASE1_RESUMEN.md  AXON88_FASE2_RESUMEN.md  AXON88_SUPER_AXON_AGENT.md  AXON88_agent_fix_useChatSessions.md  AXON88_agent_streamChat_fix.md  AXON88_web_lint_build_fix.md  AXON_AGENCY_MAP.md  BUILDER_V2_PLAN.md  (+15 more)
axon-web/: .env.local.example  README.md  package-lock.json  package.json
docs/: BUILDER_V2_PLAN.md
scripts/: dev_bootstrap.sh  install_systemd.sh  print_token_dev.py
tests/: test_auth.py  test_catalog.py  test_health.py
(+222 files in other folders)
